29.oct (ws)
      - fix #3092: Cannot see 8th note ledger lines
      - fix #6317: ledger lines not long enough for whole notes
28.oct (ws)
      - add tempo selection to new score wizard
      - fix tempo changes (worked only after reloading score), now also works
        with undo/redo
      - initial implementation of textframe object
27.oct (ws)
      - added stubs for "Text Frame" and "Fret Diagram Frame" elements
      - splitted "Measures" menu into "Measures" and "Frames"
      - fixes for frames (fixes save/restore of "schnee.mscz" example)
      - show anchor while dragging repeats
      - fix layout of repeats
26.oct (lv)
      - fix #7593: Incorrect measure duration importing MusicXML
       (ws)
      - add missing "windowIcon"
      - implement "single palette mode"; enable in palette context menu
        (right click into empty area of palette box)
      - add missing "standardIconImplementation()" to mstyle; palette title buttons
        are now visible
      - cleaner synthesizer initialization
25.oct (la)
      - fix #7665: Change instrument, undo does not undo sound
24.oct (lv)
      - fix #6404: Crash editing a MusicXML file
       (ws)
      - fix save/restore split window settings of session
      - fix #7653: crash when play panel is open with no score
      (db)
      - added lutes to instrument list
      - renamed guitar category to "fretted instruments"
23.oct (ws)
      - left align palette buttons text
      - mstyle: replaced pixmap operations with QImage as composite modes
        are only supported on X11 for pixmaps (did not work on OS-X)
22.oct (ws)
      - updates for "linked parts" implementation; synchronize line elements
20.oct (ws)
      - fixes for save/load style file (*.mss)
      - mark score dirty if synthesizer settings (mixer) are changed
19.oct (ws)
      - fix #7564: mouse note entry before a horizontal frame
18.oct (ws)
      - update of "styled" text implementation
17.oct (lv)